# dask-sql

./: .readthedocs.yaml  df.csv  setup.py
.github/workflows/: conda.yml
dask_planner/: Cargo.toml
dask_planner/src/: dialect.rs  expression.rs  lib.rs  parser.rs  sql.rs
dask_planner/src/sql/: function.rs  logical.rs  optimizer.rs  schema.rs  table.rs  types.rs
dask_planner/src/sql/logical/: alter_schema.rs  alter_table.rs  analyze_table.rs  create_catalog_schema.rs  create_experiment.rs  create_memory_table.rs  create_model.rs  create_table.rs  describe_model.rs  drop_model.rs  drop_schema.rs  export_model.rs  join.rs  predict_model.rs  repartition_by.rs  show_columns.rs  show_models.rs  show_schema.rs  show_tables.rs  use_schema.rs
dask_planner/src/sql/optimizer/: filter_columns_post_join.rs  utils.rs
dask_planner/src/sql/optimizer/utils/: column.rs  dissect.rs  end_of_need_strategy.rs  fusion.rs
dask_planner/src/sql/types/: rel_data_type_field.rs
dask_sql/: context.py
dask_sql/physical/rel/: base.py  convert.py
dask_sql/physical/rel/custom/: __init__.py  analyze_table.py  create_table.py  create_view.py  drop_table.py  repartition.py
dask_sql/physical/rel/logical/: aggregate.py  empty.py  explain.py  limit.py  project.py  subquery_alias.py  table_scan.py
dask_sql/physical/rex/: convert.py
dask_sql/physical/rex/core/: alias.py  call.py  input_ref.py  literal.py
dask_sql/server/: app.py  responses.py
dask_sql/server/static/templates/: diff.html
tests/integration/: test_select.py
