[package]
name = "dask_planner"
repository = "https://github.com/dask-contrib/dask-sql"
version = "0.1.0"
description = "Bindings for DataFusion used by Dask-SQL"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.62"

[dependencies]
async-trait = "0.1.64"
datafusion = "15.0.0"
datafusion-common = "15.0.0"
datafusion-expr = "15.0.0"
datafusion-optimizer = "15.0.0"
datafusion-sql = "15.0.0"
datafusion-python = { git="https://github.com/jdye64/arrow-datafusion-python.git", branch="arrow_type_bindings" }
env_logger = "0.10"
log = "^0.4"
mimalloc = { version = "*", default-features = false }
parking_lot = "0.12"
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3", "abi3-py38"] }
rand = "0.8"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }
uuid = { version = "1.2", features = ["v4"] }

[lib]
crate-type = ["cdylib"]
